--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A test bed to run selenium automated tests written in node running with docker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha spec/*.js --timeout 20000"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,11 @@
     "url": "https://github.com/DanielWilliamClarke/docker-selenium-node/issues"
   },
   "homepage": "https://github.com/DanielWilliamClarke/docker-selenium-node#readme",
-  "dependencies": {
-    "npm": "^6.4.1"
+  "dependencies": {},
+  "devDependencies": {
+    "chromedriver": "^2.43.1",
+    "selenium-webdriver": "^4.0.0-alpha.1",
+    "mocha": "^5.2.0",
+    "chai": "^4.1.2"
   }
 }
